--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 
     testImplementation 'junit:junit:4.12'
